// Copyright (c) The Thanos Authors.
// Licensed under the Apache License 2.0.

syntax = "proto3";
package thanos;

import "store/storepb/types.proto";
import "store/labelpb/types.proto";
import "rules/rulespb/rpc.proto";

option go_package = "targetspb";

/// Targets represents API that is responsible for gathering targets and their states.
service Targets {
    /// Targets has info for all targets.
    /// Returned targets are expected to include external labels.
    rpc Targets (TargetsRequest) returns (stream TargetsResponse);
}

message TargetsRequest {
    enum State {
        ANY = 0;
        /// This will make sure strings.ToLower(.String()) will match 'active' and 'dropped' values for
        /// Prometheus HTTP API.
        ACTIVE = 1;
        DROPPED = 2;
    }
    State state = 1;
    PartialResponseStrategy partial_response_strategy = 2;
}

message TargetsResponse {
    oneof result {
        /// structure with targets. It is up to server implementation to decide how many of those to put here within single frame.
        TargetDiscovery targets = 1;

        /// warning is considered an information piece in place of series for warning purposes.
        /// It is used to warn rule API users about suspicious cases or partial response (if enabled).
        string warning = 2;
    }
}

message TargetDiscovery {
    // @gotags: json:"activeTargets"
    repeated ActiveTarget activeTargets = 1;
    // @gotags: json:"droppedTargets"
    repeated DroppedTarget droppedTargets = 2;
}

enum TargetHealth {
    DOWN = 0;
    UP = 1;
    UNKNOWN = 2;
}

message ActiveTarget {
    // @gotags: json:"discoveredLabels"
    LabelSet discoveredLabels = 1;
    // @gotags: json:"labels"
    LabelSet labels = 2;
    // @gotags: json:"scrapePool"
    string scrapePool = 3;
    // @gotags: json:"scrapeUrl"
    string scrapeUrl = 4;
    // @gotags: json:"globalUrl"
    string globalUrl = 5;
    // @gotags: json:"lastError"
    string lastError = 6;
    // @gotags: json:"lastScrape"
    Timestamp lastScrape = 7;
    // @gotags: json:"lastScrapeDuration"
    double lastScrapeDuration = 8;
    // @gotags: json:"health"
    TargetHealth health = 9;
}

message DroppedTarget {
    // @gotags: json:"discoveredLabels"
    LabelSet discoveredLabels = 1;
}
